rhdlc/test/compile-fail/scope/use-nested-private-struct/expected.txt
error: item `c` is private
 --> top.rhdl:7:10
  |
7 | use a::b::c;
  |           ^ private item
